# flow-orchestrator

./: .clang-format  LICENSE  README.md  meson.build  meson_options.txt
buildcfg/: meson.build
dependencies/: meson.build
include/: app_config.hpp  config.h.in  flow_base.hpp  flow_builder_types.hpp  flow_config.hpp  flow_endpoints.hpp  flow_executor.hpp  flow_manager.hpp  flow_processor.hpp  flow_telemetry.hpp  meson.build
include/common/: common.hpp  file_utils.hpp  generic_factory.hpp  lua_common.hpp  network_utils.hpp
include/dpdk/: dpdk_common.hpp  dpdk_ethdev.hpp
src/: app_config.cpp  flow_base.cpp  flow_builder_types.cpp  flow_config.cpp  flow_endpoints.cpp  flow_manager.cpp  flow_processor.cpp  flow_telemetry.cpp  lua_utils.lua  main.cpp  meson.build
src/common/: common.cpp  file_utils.cpp  lua_common.cpp  network_utils.cpp
src/dpdk/: dpdk_common.cpp  dpdk_ethdev.cpp
test/: filter01.lua  meson.build  test01.cpp  test02.cpp  test_flow01.lua
