flow_orchestrator_sources += files([
    'common/common.cpp',
    'common/file_utils.cpp',
    'common/lua_common.cpp',
    'common/network_utils.cpp',
    'dpdk/dpdk_common.cpp',
    'dpdk/dpdk_ethdev.cpp',
    'flow_base.cpp',
    'flow_config.cpp',
    'flow_processor.cpp',
    'flow_endpoints.cpp',
    'flow_manager.cpp'
])

main_source = files('main.cpp')

